# inverted-pendulum

./: .gitignore  CMakeLists.txt  README.md  UPDATES.md  build-run-plot.sh  main.c  plot.sh  plot_error.gp  plot_force.gp  plot_sim.gp  plot_vel.gp
core/: controller.c  estimator.c  lin-alg.c  parameters.c  physics.c
include/: controller.h  estimator.h  lin-alg.h  parameters.h  physics.h  physics.hpp  types.h
plots/: plot1.gp  plot2.gp  plot3.gp  plot4.gp  plot5.gp  plot6.gp  plot_error.gp  plot_force.gp  plot_sim.gp  plot_state_estimate.gp  plot_vel.gp  style.gp  styles.gp
src/: main.c  main.cpp  pendulum_viz.cpp  physics.cpp
